# ergosim-game-backend

./: README.md  mypy.ini  pyproject.toml
api/accounts/: routes.py
domain/accounts/: test_user_account.py  user_account.py
domain/user/: account.py  test_account.py
ergosim/backend/api/accounts/: routes.py
ergosim/backend/domain/user/: account.py  test_account.py
