[tool.poetry]
name = "ergosim-api"
version = "0.1.0"
description = ""
authors = ["James Cauwelier <james@accelerated.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.27"
pydantic = "^2.6.3"
flask = "^3.0.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
mypy = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
